--- a/app/src/main/res/layout/user_photo_view.xml
+++ b/app/src/main/res/layout/user_photo_view.xml
@@ -1,20 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    app:cardCornerRadius="16dp"
-    app:cardElevation="0dp"
-    app:cardBackgroundColor="@android:color/white"
-    android:clipChildren="true"
-    android:clipToPadding="true">
+    android:layout_height="wrap_content">
 
-   <ImageView
-       android:id="@+id/user_photo"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:scaleType="centerCrop"
-       android:contentDescription="@string/user_photo_image_view"
-       android:foreground="@drawable/rounded_mask"/>
+   <androidx.cardview.widget.CardView
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintLeft_toLeftOf="parent"
+       app:layout_constraintRight_toRightOf="parent"
+       app:layout_constraintBottom_toBottomOf="parent"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_margin="10dp"
+       app:cardCornerRadius="@dimen/photo_corner_radius"
+       android:elevation="6dp"
+       app:cardBackgroundColor="@android:color/white"
+       android:background="@color/white">
 
-</androidx.cardview.widget.CardView>
+      <com.google.android.material.imageview.ShapeableImageView
+          android:id="@+id/user_photo"
+          android:layout_margin="7dp"
+          android:layout_width="@dimen/photo_marker_size"
+          android:layout_height="@dimen/photo_marker_size"
+          android:layout_gravity="center"
+          android:scaleType="centerCrop"
+          android:background="@color/white"
+          app:srcCompat="@drawable/ic_launcher_background"
+          android:contentDescription="@string/user_photo_image_view"
+          app:shapeAppearanceOverlay="@style/ImageView.Round"/>
+
+   </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
