--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,9 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="logo_margin">12dp</dimen>
     <dimen name="marker_size">60dp</dimen>
+    <dimen name="photo_marker_size">70dp</dimen>
+    <dimen name="photo_marker_outer_size">110dp</dimen>
+    <dimen name="photo_corner_radius">15dp</dimen>
     <dimen name="custom_info_window_offset_x">-27dp</dimen>
     <dimen name="custom_info_window_offset_y">-9dp</dimen>
     <dimen name="overlay_line_width">3dp</dimen>
