--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <style name="ImageView.Round" parent="">
+        <item name="cornerSize">15%</item>
+    </style>
     <style name="Theme.TravelMap" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
