--- a/app/src/main/res/layout/user_photo_view.xml
+++ b/app/src/main/res/layout/user_photo_view.xml
@@ -3,9 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
 
    <androidx.cardview.widget.CardView
+       android:id="@+id/card_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
@@ -13,12 +15,12 @@
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
+       app:cardElevation="40dp"
        app:cardCornerRadius="@dimen/photo_corner_radius"
-       android:elevation="6dp"
-       app:cardBackgroundColor="@android:color/white"
-       android:background="@color/white">
+       app:cardMaxElevation="10dp"
+       >
 
-      <com.google.android.material.imageview.ShapeableImageView
+      <ImageView
           android:id="@+id/user_photo"
           android:layout_margin="7dp"
           android:layout_width="@dimen/photo_marker_size"
@@ -28,7 +30,8 @@
           android:background="@color/white"
           app:srcCompat="@drawable/ic_launcher_background"
           android:contentDescription="@string/user_photo_image_view"
-          app:shapeAppearanceOverlay="@style/ImageView.Round"/>
+          />
+      <!--app:shapeAppearanceOverlay="@style/ImageView.Round"-->
 
    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
