--- a/app/src/main/res/layout/user_photo_view.xml
+++ b/app/src/main/res/layout/user_photo_view.xml
@@ -20,18 +20,51 @@
        app:cardMaxElevation="10dp"
        >
 
-      <ImageView
-          android:id="@+id/user_photo"
-          android:layout_margin="7dp"
-          android:layout_width="@dimen/photo_marker_size"
-          android:layout_height="@dimen/photo_marker_size"
-          android:layout_gravity="center"
-          android:scaleType="centerCrop"
-          android:background="@color/white"
-          app:srcCompat="@drawable/ic_launcher_background"
-          android:contentDescription="@string/user_photo_image_view"
-          />
-      <!--app:shapeAppearanceOverlay="@style/ImageView.Round"-->
+      <androidx.constraintlayout.widget.ConstraintLayout
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content">
+
+         <androidx.constraintlayout.widget.Barrier
+             android:id="@+id/barrier_bottom"
+             app:barrierDirection="top"
+             app:constraint_referenced_ids="marker_title"
+             android:layout_height="match_parent"
+             android:layout_width="match_parent"
+             />
+
+         <ImageView
+             android:id="@+id/user_photo"
+             android:layout_margin="7dp"
+             android:layout_width="@dimen/photo_marker_size"
+             android:layout_height="@dimen/photo_marker_size"
+             android:layout_gravity="center"
+             android:scaleType="centerCrop"
+             android:background="@color/white"
+             app:srcCompat="@drawable/ic_launcher_background"
+             android:contentDescription="@string/user_photo_image_view"
+             app:layout_constraintTop_toTopOf="parent"
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintBottom_toTopOf="@id/barrier_bottom"
+             />
+         <!--app:shapeAppearanceOverlay="@style/ImageView.Round"-->
+
+         <TextView
+             android:id="@+id/marker_title"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_gravity="center"
+             tools:text="Sample Title"
+             android:textSize="10sp"
+             app:layout_constraintTop_toBottomOf="@id/user_photo"
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintEnd_toEndOf="parent"
+             android:padding="6dp"
+             android:visibility="gone"
+             />
+
+      </androidx.constraintlayout.widget.ConstraintLayout>
 
    </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
