--- a/app/src/main/res/layout/user_photo_view.xml
+++ b/app/src/main/res/layout/user_photo_view.xml
@@ -55,12 +55,14 @@
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              tools:text="Sample Title"
-             android:textSize="10sp"
+             android:textSize="17sp"
+             android:textStyle="bold"
              app:layout_constraintTop_toBottomOf="@id/user_photo"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:padding="6dp"
              android:visibility="gone"
+             tools:visibility="visible"
              />
 
       </androidx.constraintlayout.widget.ConstraintLayout>
