--- a/app/src/main/res/drawable/shadow.xml
+++ b/app/src/main/res/drawable/shadow.xml
@@ -1,21 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Outer shadow layers - spread in all directions -->
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="16dp"/>
-            <solid android:color="@android:color/white"/>
-            <padding android:left="4dp"
-                android:top="4dp"
-                android:right="4dp"
-                android:bottom="4dp"/>
-            <size android:width="200dp"
-                android:height="200dp"/>
+            <solid android:color="#01000000"/>
         </shape>
     </item>
-    <item android:bottom="4dp" android:left="4dp" android:right="4dp" android:top="4dp">
+    <item
+        android:left="1dp"
+        android:top="1dp"
+        android:right="1dp"
+        android:bottom="1dp">
         <shape android:shape="rectangle">
-            <corners android:radius="16dp"/>
-            <solid android:color="#B3B3B3"/>
+            <solid android:color="#01000000"/>
+        </shape>
+    </item>
+    <item
+        android:left="2dp"
+        android:top="2dp"
+        android:right="2dp"
+        android:bottom="2dp">
+        <shape android:shape="rectangle">
+            <solid android:color="#02000000"/>
+        </shape>
+    </item>
+    <item
+        android:left="3dp"
+        android:top="3dp"
+        android:right="3dp"
+        android:bottom="3dp">
+        <shape android:shape="rectangle">
+            <solid android:color="#02000000"/>
+        </shape>
+    </item>
+    <item
+        android:left="4dp"
+        android:top="4dp"
+        android:right="4dp"
+        android:bottom="4dp">
+        <shape android:shape="rectangle">
+            <solid android:color="#03000000"/>
+        </shape>
+    </item>
+    <item
+        android:left="5dp"
+        android:top="5dp"
+        android:right="5dp"
+        android:bottom="5dp">
+        <shape android:shape="rectangle">
+            <solid android:color="#03000000"/>
+        </shape>
+    </item>
+    <item
+        android:left="6dp"
+        android:top="6dp"
+        android:right="6dp"
+        android:bottom="6dp">
+        <shape android:shape="rectangle">
+            <solid android:color="#04000000"/>
+        </shape>
+    </item>
+    <item
+        android:left="7dp"
+        android:top="7dp"
+        android:right="7dp"
+        android:bottom="7dp">
+        <shape android:shape="rectangle">
+            <solid android:color="#04000000"/>
+        </shape>
+    </item>
+    <!-- White background -->
+    <item
+        android:left="8dp"
+        android:top="8dp"
+        android:right="8dp"
+        android:bottom="8dp">
+        <shape android:shape="rectangle">
+            <solid android:color="@android:color/white"/>
         </shape>
     </item>
 </layer-list>
