--- a/app/src/main/res/layout/user_photo_view.xml
+++ b/app/src/main/res/layout/user_photo_view.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     >
 
-   <androidx.cardview.widget.CardView
+   <FrameLayout
        android:id="@+id/card_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
@@ -15,9 +15,7 @@
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
-       app:cardElevation="40dp"
-       app:cardCornerRadius="@dimen/photo_corner_radius"
-       app:cardMaxElevation="10dp"
+       android:background="@drawable/shadow"
        >
 
       <androidx.constraintlayout.widget.ConstraintLayout
@@ -37,9 +35,7 @@
              android:layout_margin="7dp"
              android:layout_width="@dimen/photo_marker_size"
              android:layout_height="@dimen/photo_marker_size"
-             android:layout_gravity="center"
              android:scaleType="centerCrop"
-             android:background="@color/white"
              app:srcCompat="@drawable/ic_launcher_background"
              android:contentDescription="@string/user_photo_image_view"
              app:layout_constraintTop_toTopOf="parent"
@@ -47,19 +43,20 @@
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintBottom_toTopOf="@id/barrier_bottom"
              />
-         <!--app:shapeAppearanceOverlay="@style/ImageView.Round"-->
 
          <TextView
              android:id="@+id/marker_title"
-             android:layout_width="wrap_content"
+             android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              tools:text="Sample Title"
-             android:textSize="17sp"
+             android:textSize="13sp"
              android:textStyle="bold"
-             app:layout_constraintTop_toBottomOf="@id/user_photo"
-             app:layout_constraintStart_toStartOf="parent"
-             app:layout_constraintEnd_toEndOf="parent"
+             android:textAlignment="center"
+             app:layout_constraintTop_toBottomOf="@id/barrier_bottom"
+             app:layout_constraintBottom_toBottomOf="parent"
+             app:layout_constraintStart_toStartOf="@id/user_photo"
+             app:layout_constraintEnd_toEndOf="@id/user_photo"
              android:padding="6dp"
              android:visibility="gone"
              tools:visibility="visible"
@@ -67,6 +64,6 @@
 
       </androidx.constraintlayout.widget.ConstraintLayout>
 
-   </androidx.cardview.widget.CardView>
+   </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
